2023-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.0

	* inst/include/toml++/toml.h: Comment-out diagnostics suppression for
	clang which CRAN Policy frowns upon
	* src/parse.cpp (getValue): Add one explicit cast
	* src/parse.h (collapsedList): Switch one loop variable to R_xlen_t

	* DESCRIPTION (Description,SystemRequirements): Updated

2023-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update for toml++

	* src/parse.cpp: More idiomatic C++17

2023-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/include/toml++: Upgraded to toml++ 3.2.0 replacing cpptoml

	* src/parse.cpp: Updated to cpptoml interface
	* src/parse.h: Split off with declarations and helpers
	* R/parseToml.R: Updated, keeping same interface
	* man/parseTOML.Rd: Updated documentation

	* inst/tinytest/bool_datetime.toml: Added local datetime, date and time
	* inst/tinytest/test_bool_datetime.R: Idem

2022-11-18  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2021-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-07-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/NEWS.Rd: Correct some NEWS.Rd formatting

2021-01-13  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Actually source from r-ci

2020-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.7

	* man/parseTOML.Rd: Update URL to https://toml.io/en/
	* man/RcppTOML-package.Rd: Idem
	* inst/NEWS.Rd: Idem
	* DESCRIPTION: Idem

	* README.md: Idem, also update three more URLs

	* .travis.yml: Use r-ci with focal and bspm for CI

2020-11-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
