@@ -1056,71 +1056,6 @@ TOML_ENABLE_WARNINGS;
 //#=====================================================================================================================
 
 #ifndef TOML_ENABLE_FLOAT16
-
-#ifdef __FLT16_MANT_DIG__
-#define TOML_FLOAT16_MANT_DIG	__FLT16_MANT_DIG__
-#define TOML_FLOAT16_DIG		__FLT16_DIG__
-#define TOML_FLOAT16_MIN_EXP	__FLT16_MIN_EXP__
-#define TOML_FLOAT16_MIN_10_EXP __FLT16_MIN_10_EXP__
-#define TOML_FLOAT16_MAX_EXP	__FLT16_MAX_EXP__
-#define TOML_FLOAT16_MAX_10_EXP __FLT16_MAX_10_EXP__
-#else
-#define TOML_FLOAT16_MANT_DIG	0
-#define TOML_FLOAT16_DIG		0
-#define TOML_FLOAT16_MIN_EXP	0
-#define TOML_FLOAT16_MIN_10_EXP 0
-#define TOML_FLOAT16_MAX_EXP	0
-#define TOML_FLOAT16_MAX_10_EXP 0
-#endif
-
-#if (TOML_FLOAT16_MANT_DIG && TOML_FLOAT16_DIG && TOML_FLOAT16_MIN_EXP && TOML_FLOAT16_MIN_10_EXP                      \
-	 && TOML_FLOAT16_MAX_EXP && TOML_FLOAT16_MAX_10_EXP)
-#define TOML_FLOAT16_LIMITS_SET 1
-#else
-#define TOML_FLOAT16_LIMITS_SET 0
-#endif
-
-#if TOML_FLOAT16_LIMITS_SET
-
-#if TOML_CLANG // >= 15
-//# {{
-//	Excerpt from https://clang.llvm.org/docs/LanguageExtensions.html:
-//
-//	_Float16 is currently only supported on the following targets,
-//	with further targets pending ABI standardization:
-//
-//		32-bit ARM
-//		64-bit ARM (AArch64)
-//		AMDGPU
-//		SPIR
-//		X86 as long as SSE2 is available
-//
-//# }}
-#if (TOML_ARCH_ARM || TOML_ARCH_AMD64 || TOML_ARCH_X86)
-#define TOML_ENABLE_FLOAT16 1
-#endif
-
-#elif TOML_GCC
-//# {{
-//	Excerpt from https://gcc.gnu.org/onlinedocs/gcc/Floating-Types.html:
-//
-//	The _Float16 type is supported on AArch64 systems by default, on ARM systems when the IEEE format for
-//	16-bit floating-point types is selected with -mfp16-format=ieee and,
-//	for both C and C++, on x86 systems with SSE2 enabled.
-//
-//	*** except: the bit about x86 seems incorrect?? ***
-//# }}
-#if (TOML_ARCH_ARM || TOML_ARCH_AMD64 /* || TOML_ARCH_X86*/)
-#define TOML_ENABLE_FLOAT16 1
-#endif
-
-#endif // clang/gcc
-
-#endif // TOML_FLOAT16_LIMITS_SET
-
-#endif // !defined(TOML_ENABLE_FLOAT16)
-
-#ifndef TOML_ENABLE_FLOAT16
 #define TOML_ENABLE_FLOAT16 0
 #endif
 //# {{
