@@ -1,4 +1,4 @@
 
 CXX_STD = CXX17
 
-PKG_CPPFLAGS = -I../inst/include
+PKG_CPPFLAGS = -I../inst/include -DTOML_ENABLE_FLOAT16=0
